css/style.css
@import url(webfont.css);
@import url(keyframes.css);
@import url(card-styling.css);

html, body{
	margin:0px;padding:0px;
	width:100%;
	height:100%;
}

body{
	-webkit-transition:0.2s;
	-moz-transition:0.2s;
	-ms-transition:0.2s;
	-o-transition:0.2s;
	transition:0.2s;

	background:hsl(210, 50%, 50%);
	background-color:hsl(230, 100%, 10%);

	text-align:center;
	font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;
	text-align:center;
	cursor:pointer;

	-webkit-perspective:1000px;
	-moz-perspective:1000px;
	-ms-perspective:1000px;
	-o-perspective:1000px;
	perspective:1000px;

	background-image:url('../img/bg.png');
	background-size:200px 200px;
	background-position:center center;

	/*-webkit-animation: moveBG 20s linear infinite;
	animation: moveBG 20s linear infinite;*/
}

body.intro #intro{
	display:block;
}

body.intro #deck{
	display:none;
}

body.intro header{
	display:none;
}

/*vertical align hack*/
body:before{
	content:'';
	height:100%;
	display:inline-block;
	vertical-align:middle;
}

#deck{
	display:none;
	position:relative;
	width:220px;
	height:320px;
	display:inline-block;
	vertical-align:middle;
}

.card_wrapper{
	position:absolute;
	top:0px;
	left:0px;
	width:100%;
	height:100%;
	/*z-index:1;*/
}

.card{
	position:relative;
	float:left;
	width:100%;
	height:100%;
	border-radius:10px;
	box-shadow:0px 3px 10px rgba(0,0,0,0.6);
	font-weight:bold;

	/*text-shadow:1px 1px 0px #FFF, -1px -1px 0px #FFF, 1px -1px 0px #FFF, -1px 1px 0px #FFF;*/

	-webkit-transition:1s;
	-moz-transition:1s;
	-ms-transition:1s;
	-o-transition:1s;
	transition:1s;

	-webkit-transform-style: preserve-3d;
	-moz-transform-style: preserve-3d;
	-mstransform-style: preserve-3d;
	-otransform-style: preserve-3d;
	transform-style: preserve-3d;
}

.card_wrapper.drawn .card{
	-webkit-animation:drawCard 1s 1;
	animation:drawCard 1s 1;
	/*-webkit-animation-fill-mode:forwards;*/
	/*animation-fill-mode:forwards;*/
}

.card_wrapper.thrown .card{
	-webkit-animation:throwCard 0.2s 1;
	animation:throwCard 0.2s 1;
	-webkit-animation-fill-mode:forwards;
	animation-fill-mode:forwards;
}

.card_wrapper.dummy{
	/*z-index:0;*/
}

.card_wrapper.dummy .card{
	-webkit-transform:rotateY(180deg) translateZ(200px);
	-moz-transform:rotateY(180deg) translateZ(200px);
	-ms-transform:rotateY(180deg) translateZ(200px);
	-o-transform:rotateY(180deg) translateZ(200px);
	transform:rotateY(180deg) translateZ(200px);
}

.card .front{
	position:absolute;
	top:0px;
	left:0px;
	width:100%;
	height:100%;
	border-radius:10px;
	z-index:2;

	background:#F5F5F5;

	-webkit-backface-visibility:hidden;
	backface-visibility:hidden;

	-webkit-transform:rotateY(0deg);
	-moz-transform:rotateY(0deg);
	-ms-transform:rotateY(0deg);
	-o-transform:rotateY(0deg);
	transform:rotateY(0deg);
}

.card .front .animation{
	position:absolute;
	top:50%;
	left:50%;
	width:160px;
	height:160px;

	margin-top:-80px;
	margin-left:-80px;

	border-radius:50%;

	background-position:center center;
	background-repeat:no-repeat;
	background-size:auto 100%;
}

.card .back{
	content:'';
	position:absolute;
	top:0px;
	left:0px;
	width:100%;
	height:100%;
	border-radius:10px;
	z-index:1;

	background:#F5F5F5;

	background-image:url(../img/card_freeman.svg);
	background-position:center center;
	background-repeat:no-repeat;
	background-size:100% auto;

	-webkit-backface-visibility:hidden;
	backface-visibility:hidden;

	-webkit-transform:rotateY(180deg);
	-moz-transform:rotateY(180deg);
	-ms-transform:rotateY(180deg);
	-o-transform:rotateY(180deg);
	transform:rotateY(180deg);

}

.card .writing{
	position:absolute;
	top:15px;left:15px;
	text-align:left;
	font-size:16px;
	text-transform:uppercase;

	line-height:32px;
}
.card .writing.flipped{
	top:auto;left:auto;
	bottom:15px;right:15px;

	-webkit-transform:rotate(180deg);
	-moz-transform:rotate(180deg);
	-ms-transform:rotate(180deg);
	-o-transform:rotate(180deg);
	transform:rotate(180deg);
}

.card .writing .number{
	font-size:32px;
	float:left;
	margin-right:10px;
}

.card .writing:after{
	position:absolute;
	top:32px;left:0px;
	font-size:32px;
}

#message{
	position:absolute;
	top:0px;
	left:0px;
	width:100%;
	height:100%;

	background-image:url(../img/explosion.gif);
	background-position:center center;
	background-size:100% auto;
	background-repeat:no-repeat;

	display:none;
}

#message:before{
	content:'';
	height:100%;
	display:inline-block;
	vertical-align:middle;
}

#message div{
	display:inline-block;
	vertical-align:middle;
	font-weight:bold;
	font-size:50px;
	line-height:60px;
	color:#FFF;
	-webkit-text-stroke:2px #000;
	text-shadow:15px 15px 40px #000, -15px -15px 40px #000, 15px -15px 40px #000, -15px 15px 40px #000;
	width:300px;
}

#message:after{
	content:'';
	height:100%;
	display:inline-block;
	vertical-align:middle;
}

#intro{
	position:fixed;
	top:0px;
	left:0px;
	width:100%;
	height:100%;

	text-align:left;

	color:#FFF;
	text-shadow:1px 1px 0px #000, -1px -1px 0px #000, 1px -1px 0px #000, -1px 1px 0px #000;
}

#intro:before{
	content:'';
	height:100%;
	display:inline-block;
	vertical-align:middle;
}

#intro div{
	display:inline-block;
	vertical-align:middle;
	width:280px;
	padding-left:20px;
}

#intro div h1{
	font-size:32px;
	margin:0px;
}

#intro div p{
	font-size:18px;
	line-height:26px;
	width:280px;
	margin:0px;
	margin-top:20px;
}

header{
	position:fixed;
	top:0px;
	left:0px;
	width:100%;
	height:60px;

	color:#FFF;
	text-shadow:1px 1px 0px #000, -1px -1px 0px #000, 1px -1px 0px #000, -1px 1px 0px #000;
	font-weight:bold;
	font-size:18px;
	line-height:60px;
}

footer{
	position:fixed;
	bottom:0px;
	left:0px;
	width:100%;
	height:60px;

	color:#FFF;
	text-shadow:1px 1px 0px #000, -1px -1px 0px #000, 1px -1px 0px #000, -1px 1px 0px #000;
	font-weight:bold;
	font-size:18px;
	line-height:60px;
}

